<resources>
    <string name="app_name">HW4 Shopping List</string>
    <string name="add_product">Add Product</string>
    <string name="hint_product">Product Name...</string>
    <string name="button_save">Save</string>
    <string name="button_create">Create</string>
    <string name="label_product_name">Product Name*:</string>
    <string name="label_product_quantity">Quantity*:</string>
    <string name="label_product_unit">Unit*:</string>
    <string name="button_add">Add</string>
    <string name="button_increment">+</string>
    <string name="button_decrement">-</string>

    <string-array name="labels_unit">
        <item>Unit</item>
        <item>Kg</item>
        <item>Liter</item>
    </string-array>
    
    <string-array name="edit_delete">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
</resources>